--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,23 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap Css -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}" />
 
     <!-- Theme Css -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}" />
 
     <!-- Custom Css -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
 
-    <title>Project Management System | {{Title}}</title>
+    <!-- Fav Icon  -->
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='icon/home.png') }}">
+
+    <title>Project Management System | {{title}}</title>
 </head>
 
 <!-- Body Content Starts -->
+
 {% block body %} {% endblock %}
+
 <!-- Body Content Ends -->
 
 <!-- Bootstrap Js -->
@@ -27,8 +32,6 @@
 <!-- Custom Js -->
 <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
 
-<body>
-
-</body>
+<body></body>
 
 </html>
