modified:   app.py 	new file:   templates/404.html 	modified:   templates/dashboard.html 	modified:   templates/index.html 	modified:   templates/layout.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,11 +34,11 @@
                         interface to ensure your projects are delivered on time and within budget.</p>
                     <p>Key features of our system include:</p>
                     <ul>
-                        <li>Project creation and management</li>
-                        <li>Task assignment and tracking</li>
-                        <li>Team collaboration and communication</li>
                         <li>Real-time progress monitoring</li>
-                        <li>Document sharing and version control</li>
+                        <li>Project creation </li>
+                        <li>Tasks creation</li>
+                        <li>Teams creation</li>
+                        <li>Version control</li>
                     </ul>
                     <p>Sign up today to experience the benefits of effective project management!</p>
                     <div class="text-center align-items-center justify-content-center">
