--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,62 @@
 
 <body>
 
-    <!-- Body Content Goes Here -->
+    <div class="container text-center">
+        <div class="h1 my-3 mx-5">
+            <hr>
+            Progress Monitoring Dashboard
+            <hr>
+        </div>
+    </div>
+
+
+    <div class="container my-4">
+        <div class="row">
+            <div class="col-md-3 my-3">
+                <a href="/tasks" class=" card-link">
+                    <div class="card text-center bg-success">
+                        <div class="card-body">
+                            <h5 class="card-title">Tasks</h5>
+                            <p class="card-text">{{ num_tasks }}</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-md-3 my-3">
+                <a href="/todo" class="card-link">
+                    <div class="card text-center bg-warning">
+                        <div class="card-body">
+                            <h5 class="card-title">To-Do Lists</h5>
+                            <p class="card-text">{{ num_todolists }}</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-md-3 my-3">
+                <a href="/teams" class="card-link ">
+                    <div class="card text-center bg-danger">
+                        <div class="card-body">
+                            <h5 class="card-title">Teams</h5>
+                            <p class="card-text">{{ num_teams }}</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-md-3 my-3">
+                <a href="/project" class="card-link">
+                    <div class="card text-center bg-info">
+                        <div class="card-body">
+                            <h5 class="card-title">Projects</h5>
+                            <p class="card-text">{{ num_projects }}</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
 
 </body>
 {% endblock %}
