--- a/templates/passwd.html
+++ b/templates/passwd.html
@@ -7,6 +7,8 @@
         <div class="h1 my-5 mx-5">
             <hr>
             Change Password for {{username}}
+
+            <a class="btn btn-primary" href="/dashboard">Go to Dashboard </a>
             <hr>
         </div>
     </div>
